Fixed dark mode

--- a/client/styles.css
+++ b/client/styles.css
@@ -278,7 +278,7 @@ header .toggle-links {
 }
 
 .h {
-  background-color: rgb(246, 247, 248);
+  
   margin-top: 10vh;
   padding: 0 4rem;
   height: 80vh;
